fix mobile ui overflow issue

--- a/styles.css
+++ b/styles.css
@@ -26,17 +26,8 @@
 
 
 
-#gradient-cursor{
-    background: radial-gradient( rgba(29, 78, 216, 0.30), transparent 80%);
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    position: absolute;
-    z-index: 50;
-    top:140px;
-    left:350px;
-    
-}
+
+
 
 
 #app{
@@ -59,6 +50,8 @@
     font-weight: 600;
     
 }
+
+
 
 #app__intro__header-title > span{
     font-size: 48px;
@@ -95,12 +88,12 @@
 }
 
 
-.app__intro__footer> a >svg:hover{
+.app__intro__footer > a > svg:hover{
     color: #e2e8f0;
 }
 
 
-.app__intro__footer > a >svg{
+.app__intro__footer > a > svg{
 
     width:25px;
     height:25px;
@@ -147,10 +140,9 @@
     top: 0;
     right: 0;
     left: 0;
-    background: rgba(10, 38, 71, 0.5);
     padding: 20px 0;
     backdrop-filter: blur(5px);
-    
+    z-index: 50;
     
 
 }
@@ -216,6 +208,8 @@ font-weight: 500;
 color: white;
 
 }
+
+
 
 
 
@@ -374,11 +368,27 @@ color: white;
 }
 
 
+#gradient-cursor{
+    display: none;
+}
+
+
 
 @media only screen and (min-width: 1024px){
 
 
-
+    #gradient-cursor{
+        background: radial-gradient( rgba(29, 78, 216, 0.30), transparent 80%);
+        width: 300px;
+        height: 300px;
+        border-radius: 50%;
+        position: absolute;
+        z-index: 50;
+        top:140px;
+        left:350px;
+        
+    }
+    
 #app{
     width: 100%;
     min-height: 100vh;
